--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Malla Interactiva Derecho UCSC</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="header">
+    <h1>Malla Interactiva - Derecho UCSC</h1>
+    <p>Créditos acumulados: <span id="creditos">0</span></p>
+  </div>
 
+  <div id="malla" class="grid"></div>
+
+  <script src="script.js"></script>
+</body>
+</html>
